--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,58 @@
-/*  your css code here. If applicable */
-
-
-
-
-
-.main{
-    background-color:rgb(135, 206, 235);
+/* Set the entire page's background color to rgb(135, 206, 235) using the :root pseudo-class */
+:root {
+    --page-background-color: rgb(135, 206, 235);
 }
-#first{
-    color: white;
+
+body {
+    background-color: var(--page-background-color);
+}
+
+/* Article with Paragraphs */
+article {
+    margin: 20px;
+}
+
+/* First paragraph: White text on a black background (use :first-child) */
+article p:first-child {
     background-color: black;
+    color: white;
 }
-/* #second{
 
-} */
-#third{
+/* Second paragraph: Standard text color (use :nth-child(2)) */
+article p:nth-child(2) {
+    /* Standard text color (you can define the color here) */
+    color: black;
+}
+
+/* Third paragraph: Red text (use :last-child) */
+article p:last-child {
     color: red;
-    
 }
-.uli{
-/*     padding-left: 10px; */
-    width: 50%;
+
+/* Unordered List */
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 20px;
 }
-#gray{
-	padding-left: 10px;
+
+li {
     background-color: gray;
+    width: 50%;
+    padding: 10px;
+    font-size: 16px; /* Default font size for list items */
 }
-#pink{
-    background-color: pink;
+
+/* First and last items: Font size of 22px */
+li:first-child,
+li:last-child {
+    font-size: 22px;
 }
 #normal{
-    background-color: white;
-    font-size: 22px;
+	background-color:white;
+}
+
+/* Third-to-last item: Pink background color */
+li:nth-last-child(3) {
+    background-color: pink;
 }
