--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,28 @@
 /* Set the entire page's background color to rgb(135, 206, 235) using the :root pseudo-class */
 :root {
-    --page-background-color: rgb(135, 206, 235);
+    background-color: rgb(135, 206, 235);
 }
 
-body {
-    background-color: var(--page-background-color);
-}
 
 /* Article with Paragraphs */
-article {
+/* article {
     margin: 20px;
-}
+} */
 
 /* First paragraph: White text on a black background (use :first-child) */
-article p:first-child {
+#first-child {
     background-color: black;
     color: white;
 }
 
 /* Second paragraph: Standard text color (use :nth-child(2)) */
-article p:nth-child(2) {
+#nth-child {
     /* Standard text color (you can define the color here) */
     color: black;
 }
 
 /* Third paragraph: Red text (use :last-child) */
-article p:last-child {
+#last-child {
     color: red;
 }
 
@@ -33,26 +30,18 @@ article p:last-child {
 ul {
     list-style-type: none;
     padding: 0;
+    width: 50%;
+    padding: 10px;
     margin: 20px;
 }
 
-li {
+.first_last{
+    background-color: white;
+
+}
+.second_fourth{
     background-color: gray;
-    width: 50%;
-    padding: 10px;
-    font-size: 16px; /* Default font size for list items */
 }
-
-/* First and last items: Font size of 22px */
-li:first-child,
-li:last-child {
-    font-size: 22px;
-}
-#normal{
-	background-color:white;
-}
-
-/* Third-to-last item: Pink background color */
-li:nth-last-child(3) {
+#middle{
     background-color: pink;
 }
