--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@
 :root {
     background-color: rgb(135, 206, 235);
 }
+*{
+	margin:0;
+	padding:0;
+}
 
 
 
@@ -25,7 +29,6 @@
 
 /* Unordered List */
 ul {
-    list-style-type: none;
     padding: 0;
     width: 50%;
     padding: 10px;
